opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/Chris00/mesh"
dev-repo: "git+https://github.com/Chris00/mesh.git"
bug-reports: "https://github.com/Chris00/mesh/issues"
tags: [ "clib:triangle" ]
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "jbuilder" {build & >= "1.0+beta9"}
  "configurator" {build}
  "base" {build}
  "stdio" {build}
  "base-bigarray"
  "base-bytes"
  "mesh"
  "lacaml" {with-test}
]
